2006-01-22  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/interfaces/xoverlay.c:
	  Fix prepare-xwindow-id code example in the docs - we need to
	  ignore all messages that aren't element messages as well.
	  
2006-01-21  Julien MOUTTE  <julien@moutte.net>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_buffer_alloc):
	  I think one day i'll completely undestand how caps negotiation
	  is supposed to work. This refactoring handles buffer_alloc
	  called with caps we can't handle. We definitely don't want a
	  set_caps with those caps, so we define and allocate a buffer
	  we would like to receive.

2006-01-19  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstplaybasebin.c: (setup_source):
	  Free iterator when done.

2006-01-17  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_render):
	  Fix playback of non-synchronised streams by assuming a rate
	  of 1.0 instead of a random one.

	  Makes this work again:

	  gst-launch filesrc location=raw_audio.file ! 'audio/x-raw-int,
	  endianness=(int)4321, signed=(boolean)true, width=(int)16,
	  depth=(int)16, rate=(int)44100, channels=(int)2' ! audioconvert !
	  audioresample ! alsasink

=== release 0.10.2 ===

2006-01-16  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.10.2, "Then the devil is six"

2006-01-16  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/playback/gststreaminfo.c: (gst_stream_info_set_mute):
	* gst/playback/gststreamselector.c:
	(gst_stream_selector_set_property):
	  Comment out broken code that connects to the state-changed signal.
	  At this point, changing current stream selection is broken, but 
	  stuff like gst-launch playbin current-audio=1 works and filters
	  to the chosen stream.

2006-01-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/vorbis/vorbisdec.c: (vorbis_dec_src_query):
	  Fix #327216 (null dereference in vorbisdec)
