@@ -1,3 +1,11 @@
+2006-01-22  Julien MOUTTE  <julien@moutte.net>
+
+	* sys/ximage/ximagesink.c: (gst_ximagesink_ximage_destroy):
+	* sys/xvimage/xvimagesink.c: (gst_xvimage_buffer_destroy),
+	(gst_xvimagesink_buffer_alloc): Playbin keeps some ref to some 
+	frames. We might get a frame destroyed after changing state to
+	NULL, adding a safety check on xcontext.
+
 2006-01-22  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* gst-libs/gst/interfaces/xoverlay.c:
